# Assembly-Simulator

./: .gitignore  DOCUMENTATION.md  README.md
risc-simulator/: CMakeLists.txt  main.c
risc-simulator/include/: alu.h  control_unit.h  cpu.h  instructions.h  memory.h
risc-simulator/src/: alu.c
risc-simulator/utils/: ideas.txt
riscv-simulator/: CMakeLists.txt  main.c  makefile
riscv-simulator/include/: alu.h  assembler.h  cpu.h  decoder.h  encoder.h  instruction.h  memory.h
riscv-simulator/src/: alu.c  assembler.c  cpu.c  decoder.c  encoder.c  memory.c
riscv-simulator/tests/: 2_to_power.asm  add_sub.asm  btype_bne_taken.asm  btype_no_labels.asm  btype_sign_neg.asm  btype_sign_pos.asm  btype_sign_zero.asm  compute_modulo.asm  conditional_sum.asm  counting_bits.asm  divide_by_0.asm  factorial.asm  fibonacci.asm  jal_simple.asm  jalr_simple.asm  lui_auipc.asm  mul_div.asm  shifts_bitwise.asm  sum_of_n.asm  swap.asm  vector_like_sum.asm
